starting to impliment functionality

--- a/index.html
+++ b/index.html
@@ -4,15 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <link rel="stylesheet" href="style.css">
+    <script src="script.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet">
     <title>P2</title>
 </head>
 <body>
     <h1>Portfolio v2.0</h1>
+    <div id="plDiv"></div>
     <a href="" onclick="">refresh &#8635;</a>
-
-    <div id="tableDiv">
+    <div id="tableDiv"></div>
+    <!-- <div id="tableDiv2">
         <br>
         <table>
             <tr>
@@ -38,7 +41,7 @@
             </tr>
             
           </table>
-    </div>
+    </div> -->
 
     <div id="formDiv">
         <br>
