added sell functionality, rlzdPL broken atm

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <body>
     <h1>Portfolio v2.0</h1>
     <div id="plDiv"></div>
+    <div id="fakePlDiv"></div>
     <button type="button" class="btn btn-primary" onclick="updatePrices()">update prices</button>
     <div id="tableDiv"></div>
     <!-- <div id="tableDiv2">
