added last update feature

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div id="plDiv"></div>
     <div id="fakePlDiv"></div>
     <button type="button" class="btn btn-primary" onclick="updatePrices()">update prices</button>
-    <div id="updatedDiv"><p>last updated at ...</p></div>
+    <div id="updatedDiv"></div>
     <div id="tableDiv"></div>
     <!-- <div id="tableDiv2">
         <br>
